# Ohrogon

./: .editorconfig  .gitignore  .gitmodules  ArrayStructBuffer.h  CMakeLists.txt  Component.h  Console.h  DirectionLights.h  File.h  Material.h  Mesh.h  ModelLoader.h  Object.h  Ohrogon.sln  Primitive.h  Shader.h  String.h  StructBuffer.h  Texture.h  Time.h  Window.h  config.naml  main.cpp
.github/workflows/: main.yml
Ohrogon/: ArrayStructBuffer.h  Camera.h  Collider.h  Component.h  Console.h  DirectionLights.h  File.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  KeyManager.cpp  KeyManager.h  Keyboard.h  Material.h  Mesh.h  MeshRenderer.h  ModelLoader.h  Mouse.h  MouseManager.cpp  MouseManager.h  OLD_ArrayBuffer.h  Object.h  Ohrogon.vcxproj  Ohrogon.vcxproj.filters  PointLights.h  Primitive.h  Rigidbody.h  Shader.cpp  Shader.h  String.h  StructBuffer.h  Symbol.h  Texture.h  Transform.cpp  Window.cpp  Window.h  build.bat  main.cpp  test.h
Ohrogon/Headers/: Transform.h
Ohrogon/Shaders/: AltFragShader.frag  FragShader.frag  FragShader.glsl  FragShader.shader  VertShader.glsl  VertShader.shader  VertShader.vert
Ohrogon/data/Shaders/: 2dFragShader.frag  2dVertShader.vert
data/Objects/Orb/: Orb.mtl
data/Shaders/: FragShader.frag  VertShader.vert
lib/atyp/: atyp_Matrix4.h  atyp_String.h
lib/glad/include/glad/: glad.h
lib/glfw/: glfw3.lib
src/: ArrayStructBuffer.h  Camera.h  Color.h  Component.h  Console.h  DirectionLights.h  File.h  Material.h  Mesh.h  ModelLoader.h  Mouse.h  Primitive.h  Shader.h  StructBuffer.h  Time.h  Window.h  main.cpp
src/data/Meshes/: OtherOrb.mtl
src/data/Shaders/: FragShader.frag
src/dependencies/atyp/: atyp_Array.h  atyp_Transform.h
src/dependencies/glad/src/: glad.c
